Fixed small layout issue for small arrow icon in cardHeadingButton.

--- a/src/App.scss
+++ b/src/App.scss
@@ -124,6 +124,12 @@
         }
     }
 
+    .cardHeadingButton {
+        & > div {
+            max-width: 86%;
+        }
+    }
+
     .largeItemFirstRow,
     .largeItemSecondRow {
         @include flexColumn;
